--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "main": "index.js",
   "dependencies": {
     "@iota/core": "^1.0.0-beta.5",
-    "grunt-cli": "1.3.1",
-    "grunt-contrib-uglify": "4.0.0",
-    "grunt-run": "^0.8.1"
+    "@iota/checksum": "^1.0.0-beta.5",
+    "@iota/validators": "^1.0.0-beta.5"
   },
   "devDependencies": {
-    "@iota/checksum": "^1.0.0-beta.5",
-    "@iota/validators": "^1.0.0-beta.5",
     "copyfiles": "^2.1.0",
     "grunt": "1.0.3",
     "grunt-browserify": "^5.3.0",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-copy": "^0.1.0"
+    "grunt-copy": "^0.1.0",
+    "grunt-cli": "1.3.1",
+    "grunt-contrib-uglify": "4.0.0",
+    "grunt-run": "^0.8.1"
   },
   "scripts": {
     "postinstall": "grunt build"
