--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "grunt-copy": "^0.1.0",
     "grunt-cli": "1.3.1",
     "grunt-contrib-uglify": "4.0.0",
-    "grunt-run": "^0.8.1"
+    "grunt-run": "^0.8.1",
+    "typescript": "^3.0.3"
   },
   "scripts": {
     "postinstall": "grunt build"
