--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@iota/core": "^1.0.0-beta.5",
     "@iota/checksum": "^1.0.0-beta.5",
-    "@iota/validators": "^1.0.0-beta.5"
+    "@iota/core": "^1.0.0-beta.5",
+    "@iota/validators": "^1.0.0-beta.5",
+    "jsqr": "^1.1.1"
   },
   "devDependencies": {
     "copyfiles": "^2.1.0",
