--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@iota/checksum": "^1.0.0-beta.5",
     "@iota/core": "^1.0.0-beta.5",
     "@iota/validators": "^1.0.0-beta.5",
+    "js-string-compression": "^1.0.1",
     "jsqr": "^1.1.1",
     "qrious": "^4.0.2"
   },
