--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@iota/validators": "^1.0.0-beta.5",
     "js-string-compression": "^1.0.1",
     "jsqr": "^1.1.1",
+    "node-zip": "^1.1.1",
     "qrious": "^4.0.2"
   },
   "devDependencies": {
